kilda-gui * reverted to java 8 * dockerfile logic that remove java 17 deps * all deps kept the same * removed old jUnit transitive deps from com.googlecode.json-simple * Unit tests for statsController fixed * small refactoring for FlowConverter.java,FlowPathConverter.java,IslLinkConverter.java,